--- a/index.html
+++ b/index.html
@@ -41,5 +41,30 @@
 			</div>
 		</div>
 	</header>
+	<section class="tools">
+		<div class="container">
+			<h2 class="h2-title">Easy & Useful</h2>
+			<h3 class="tools__title">Project Management Tool</h3>
+			<p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</p>
+			<div class="tools__block">
+				<div class="tools__item">
+					<img src="img/tools-icon-1.png" alt="" class="tools__icon tools-icon-1">
+					<h4 class="tools__span">Title Goes Here</h4>
+					<p class="tools__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</div>
+				<div class="tools__item">
+					<img src="img/tools-icon-2.png" alt="" class="tools__icon tools-icon-2">
+					<h4 class="tools__span">Title Goes Here</h4>
+					<p class="tools__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</div>
+				<div class="tools__item">
+					<img src="img/tools-icon-3.png" alt="" class="tools__icon tools-icon-3">
+					<h4 class="tools__span">Title Goes Here</h4>
+					<p class="tools__description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				</div>	
+			</div>
+			<button class="tools__button">Get started</button>
+		</div>
+	</section>
 </body>
 </html>
