--- a/index.html
+++ b/index.html
@@ -66,5 +66,35 @@
 			<button class="tools__button">Get started</button>
 		</div>
 	</section>
+	<section class="stats">
+			<div class="stats__item">
+				<img src="img/stats-icon-1.png" alt="" class="stats__icon">
+				<div class="stats__text-block">
+					<p class="stats__text_one">12000+</p>
+					<p class="stats__text_two">Business</p>
+				</div>
+			</div>
+			<div class="stats__item">
+				<img src="img/stats-icon-2.png" alt="" class="stats__icon">
+				<div class="stats__text-block">
+					<p class="stats__text_one">60000+</p>
+					<p class="stats__text_two">Downloads</p>
+				</div>
+			</div>
+			<div class="stats__item">
+				<img src="img/stats-icon-3.png" alt="" class="stats__icon">
+				<div class="stats__text-block">
+					<p class="stats__text_one">30000+</p>
+					<p class="stats__text_two">Free Installs</p>
+				</div>
+			</div>
+			<div class="stats__item">
+				<img src="img/stats-icon-4.png" alt="" class="stats__icon">
+				<div class="stats__text-block">
+					<p class="stats__text_one">40000+</p>
+					<p class="stats__text_two">Pro Users</p>
+				</div>
+			</div>
+	</section>
 </body>
 </html>
